Prevent whitespace wrapping in jlmore
Wrapping whitespaces makes the th height bigger
than expected and breaks the columns on hover
visibility animation.

--- a/frontend/treeview.css
+++ b/frontend/treeview.css
@@ -128,6 +128,7 @@ jlmore {
     cursor: pointer;
     /* this only affects jlmore inside a table */
     width: 100%;
+    white-space: nowrap;
 }
 
 jlmore::before {
